# oac-tree-bundle

./: .gitmodules  CMakeLists.txt  README.md  VersionInfo
.github/smoke/: local-only.xml  smoke-test.sh
.github/workflows/: linux-build.yml  macos-build.yml
cmake/module/: cmake_functions.cmake  configuration.cmake  oac-tree-path.sh.in
scripts/: set_to_branch.sh
